@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.6
 
+	- FLTK windows could appear off-screen on X11 (STR #586)
 	- The configure script did not support
 	  --disable-localfoo to completely disable image file
 	  support (STR #582)
